# cleverdiff

./: .gitignore  .travis.yml  README.md  cleverdiff.py  diffhunk.py  difflist.py  new.def  pyproject.toml  test_diffhunk.py  test_difflist.py
.github/workflows/: codeql-analysis.yml  test.xml  test.yml
cleverdiff/: __init__.py  __main__.py  cleverdiff.py  contexts.py  diffhunk.py  difflist.py  test_cleverdiff.py  test_contexts.py  test_diffhunk.py  test_difflist.py
cleverdiff/test_data/: ref2.def
